Fix swipe issue on mobile

--- a/style.css
+++ b/style.css
@@ -341,7 +341,15 @@ button:hover {
 
 /* --- RESPONSIVE --- */
 /* --- RESPONSIVE --- */
+
 @media (max-width: 600px) {
+
+  html,
+  body {
+    touch-action: none;
+    overscroll-behavior: contain;
+  }
+
   .top-players {
     max-height: 100px;
     overflow-y: auto;
